--- a/Project1/Project1/ClientApp/src/app/recipe/recipe.component.css
+++ b/Project1/Project1/ClientApp/src/app/recipe/recipe.component.css
@@ -7,13 +7,37 @@
 }
 
 .recList {
-
 }
 
 .recSearch {
-
+  margin: auto;
+  width: 60%;
+  border: 3px solid #73AD21;
+  padding: 10px;
+  text-align: center;
 }
 
 .meow {
-
 }
+
+.ingred::before {
+  content: "|";
+}
+
+.myButt {
+  margin-left: 10px;
+  width: 10%;
+}
+
+.myBox {
+  width: 80%;
+}
+
+.sButts {
+  margin: 0 auto;
+  text-align: center;
+}
+
+  .sButts button {
+    width: 50%;
+  }
