--- a/Project1/Project1/ClientApp/src/app/recipe/recipe.component.html
+++ b/Project1/Project1/ClientApp/src/app/recipe/recipe.component.html
@@ -1,31 +1,50 @@
-<span class="meow">
-  <div class="recSearch">
-    <h2>Whatcha Got Homie:</h2>
-    <input (keyup.enter)="bang(thing.value)" [(ngModel)]="in_food" type="text" #thing class="myBox" />
-    <button (click)="bang(thing.value)" class="myButt">Add</button><br />
+<div class="boxOne">
+  <span class="meow">
+    <div class="recSearch">
+      <h2>Whatcha Got Homie:</h2>
+      <input (keyup.enter)="bang(thing.value)" [(ngModel)]="in_food" type="text" #thing class="myBox" />
+      <button (click)="bang(thing.value)" class="myButt">Add</button><br />
+    </div>
+  </span>
+
+
+  <tbody>
+    <tr *ngFor="let food of foods; let i = index" class="foods">
+      <td class="food"><button (click)="delete(food)">X</button>{{food}}</td>
+    </tr>
+  </tbody>
+  <br />
+
+
+  <div class="sButts">
+    <button (click)="submitList()" class="sButts">submit</button>
+
+    <p class="howMany"><u><b>How many recipes you want:</b></u></p>
+    <input list="amount" type="text" [(ngModel)]="sAmount" class="numberBox">
+    <datalist id="amount">
+      <option value="10">
+      <option value="20">
+      <option value="30">
+      <option value="40">
+      <option value="50">
+    </datalist>
   </div>
-</span>
-
-<tbody>
-  <tr *ngFor="let food of foods; let i = index" class="food">
-    <td class="food"><button (click)="delete(food)">X</button>{{food}}</td>
-  </tr>
-</tbody>
-<br />
-
-<div class="sButts">
-  <button (click)="submitList()" class="sButts">submit</button>
 </div>
-<br />
+
 
 <hr />
-
-<tbody class="recList" *ngIf="recipes">
-  <tr><h2><u>Recipie Results: </u></h2></tr>
-  <tr *ngFor="let recipe of recipes" (click)="getRecipe(recipe.id)" style="display:block;">
-    <td>{{recipe.title}}</td>
-  </tr>
-</tbody>
+<div class="recipeBox">
+  <tbody class="recList" *ngIf="recipes">
+    <tr><h2><u>Recipie Results: </u></h2></tr>
+    <tr *ngFor="let recipe of recipes; let i = index" (click)="getRecipe(recipe.id)" class="stuffBox">
+      <td class="resItem">
+        <u class="pRes"><b>{{recipe.title}}</b></u>
+        <br />
+        <hr />
+        missed ingredients: {{recipe.missedIngredientCount}}
+      </td>
+  </tbody>
+</div>
 
 <tbody style="display:block;">
   <tr (click)="getRecipe(recipe.id)"></tr>
@@ -38,16 +57,36 @@
 
 <tbody *ngIf="recipeInfos">
   <tr>
-    <td> {{recipeInfos.title}}</td>
+    <td class="recipeName"> <u><b>-{{recipeInfos.title}}-</b></u></td>
   </tr>
+
+  <tr>
+    <u><b>Cook Time:</b></u> {{recipeInfos.readyInMinutes}} minutes
+  </tr>
+
+  <tr>
+    <img src="{{recipeInfos.image}}" />
+  </tr>
+
+
+  <span><u><b>Ingredients: </b></u></span>
   <tr *ngFor="let obj of extendIngreds; let i = index">
     <td class="ingreds">
       <span *ngIf="obj.aisle == 'Spices and Seasonings'">
-        {{obj.name}}
+        - {{obj.name}}
       </span>
       <span *ngIf="obj.aisle != 'Spices and Seasonings'">
-        {{obj.original}}
+        - {{obj.original}}
       </span>
     </td>
   </tr>
 </tbody>
+
+<tbody *ngIf="recipeInfos">
+  <tr>
+    <u><b>Instructions: </b></u>
+    {{doit}}
+  </tr>
+</tbody>
+
+
