--- a/Project1/Project1/ClientApp/src/app/recipe/recipe.component.css
+++ b/Project1/Project1/ClientApp/src/app/recipe/recipe.component.css
@@ -1,20 +1,56 @@
 .food {
   border: 5px solid gray;
   padding: 10px;
-  width: 320px;
+  width: 5em;
   border-radius: 40px;
   text-align: center;
 }
 
+.foods {
+  display: inline-block;
+  margin-top: 10px;
+  margin-right: 10px;
+}
+
+.resItem {
+  border: 3px solid #73AD21;
+  border-radius: 10px;
+}
+
+  .resItem:hover {
+    cursor: pointer;
+  }
+
 .recList {
+}
+.recipeBox {
+  margin-left: 10%;
+}
+
+.boxOne {
+  margin: auto;
+  width: 80%;
+  border: 3px solid #73AD21;
+  padding: 10px;
+  text-align: center;
+}
+
+.recipeName {
+    text-align: center;
+    font-size: 2em;
+}
+
+.stuffBox {
+    text-align: center; 
 }
 
 .recSearch {
   margin: auto;
   width: 60%;
-  border: 3px solid #73AD21;
+  border: 3px solid black;
   padding: 10px;
   text-align: center;
+  border-radius: 10px;
 }
 
 .meow {
@@ -26,18 +62,35 @@
 
 .myButt {
   margin-left: 10px;
-  width: 10%;
+  width: auto;
+  margin-top: 10px;
+  border-radius: 10px;
+}
+
+.howMany {
+    margin-top: 10px;
 }
 
 .myBox {
   width: 80%;
+  border-radius: 10px;
 }
 
 .sButts {
-  margin: 0 auto;
   text-align: center;
+  margin-top: 10px;
+  margin: auto;
+  width: 60%;
+  border: 3px solid black;
+  padding: 10px;
+  text-align: center;
+  border-radius: 10px;
 }
 
   .sButts button {
     width: 50%;
+  }
+
+  .numberBox {
+      border-radius: 10px;
   }
